FlightSimulator/json/cyrus-reader.output
Grammar

    0 $accept: section_list $end

    1 section_list: section_list ',' section_id '{' object_list '}'
    2             | section_id '{' object_list '}'

    3 object_list: object_list ',' name '{' variable_list '}'
    4            | name '{' variable_list '}'

    5 variable_list: variable_list ',' variable
    6              | variable

    7 variable: name STRING
    8         | name FLOAT
    9         | name INTEGER
   10         | name array_var

   11 array_var: '[' array_list ']'

   12 array_list: array_list ',' variable
   13           | variable

   14 name: STRING ':'

   15 section_id: '$' STRING


Terminals, with rules where they appear

    $end (0) 0
    '$' (36) 15
    ',' (44) 1 3 5 12
    ':' (58) 14
    '[' (91) 11
    ']' (93) 11
    '{' (123) 1 2 3 4
    '}' (125) 1 2 3 4
    error (256)
    FLOAT <dval> (258) 8
    INTEGER <ival> (259) 9
    STRING <sval> (260) 7 14 15


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    section_list (14)
        on left: 1 2
        on right: 0 1
    object_list (15)
        on left: 3 4
        on right: 1 2 3
    variable_list (16)
        on left: 5 6
        on right: 3 4 5
    variable <data_ptr> (17)
        on left: 7 8 9 10
        on right: 5 6 12 13
    array_var <data_ptr> (18)
        on left: 11
        on right: 10
    array_list (19)
        on left: 12 13
        on right: 11 12
    name <sval> (20)
        on left: 14
        on right: 3 4 7 8 9 10
    section_id <sval> (21)
        on left: 15
        on right: 1 2


State 0

    0 $accept: . section_list $end

    '$'  shift, and go to state 1

    section_list  go to state 2
    section_id    go to state 3


State 1

   15 section_id: '$' . STRING

    STRING  shift, and go to state 4


State 2

    0 $accept: section_list . $end
    1 section_list: section_list . ',' section_id '{' object_list '}'

    $end  shift, and go to state 5
    ','   shift, and go to state 6


State 3

    2 section_list: section_id . '{' object_list '}'

    '{'  shift, and go to state 7


State 4

   15 section_id: '$' STRING .

    $default  reduce using rule 15 (section_id)


State 5

    0 $accept: section_list $end .

    $default  accept


State 6

    1 section_list: section_list ',' . section_id '{' object_list '}'

    '$'  shift, and go to state 1

    section_id  go to state 8


State 7

    2 section_list: section_id '{' . object_list '}'

    STRING  shift, and go to state 9

    object_list  go to state 10
    name         go to state 11


State 8

    1 section_list: section_list ',' section_id . '{' object_list '}'

    '{'  shift, and go to state 12


State 9

   14 name: STRING . ':'

    ':'  shift, and go to state 13


State 10

    2 section_list: section_id '{' object_list . '}'
    3 object_list: object_list . ',' name '{' variable_list '}'

    ','  shift, and go to state 14
    '}'  shift, and go to state 15


State 11

    4 object_list: name . '{' variable_list '}'

    '{'  shift, and go to state 16


State 12

    1 section_list: section_list ',' section_id '{' . object_list '}'

    STRING  shift, and go to state 9

    object_list  go to state 17
    name         go to state 11


State 13

   14 name: STRING ':' .

    $default  reduce using rule 14 (name)


State 14

    3 object_list: object_list ',' . name '{' variable_list '}'

    STRING  shift, and go to state 9

    name  go to state 18


State 15

    2 section_list: section_id '{' object_list '}' .

    $default  reduce using rule 2 (section_list)


State 16

    4 object_list: name '{' . variable_list '}'

    STRING  shift, and go to state 9

    variable_list  go to state 19
    variable       go to state 20
    name           go to state 21


State 17

    1 section_list: section_list ',' section_id '{' object_list . '}'
    3 object_list: object_list . ',' name '{' variable_list '}'

    ','  shift, and go to state 14
    '}'  shift, and go to state 22


State 18

    3 object_list: object_list ',' name . '{' variable_list '}'

    '{'  shift, and go to state 23


State 19

    4 object_list: name '{' variable_list . '}'
    5 variable_list: variable_list . ',' variable

    ','  shift, and go to state 24
    '}'  shift, and go to state 25


State 20

    6 variable_list: variable .

    $default  reduce using rule 6 (variable_list)


State 21

    7 variable: name . STRING
    8         | name . FLOAT
    9         | name . INTEGER
   10         | name . array_var

    FLOAT    shift, and go to state 26
    INTEGER  shift, and go to state 27
    STRING   shift, and go to state 28
    '['      shift, and go to state 29

    array_var  go to state 30


State 22

    1 section_list: section_list ',' section_id '{' object_list '}' .

    $default  reduce using rule 1 (section_list)


State 23

    3 object_list: object_list ',' name '{' . variable_list '}'

    STRING  shift, and go to state 9

    variable_list  go to state 31
    variable       go to state 20
    name           go to state 21


State 24

    5 variable_list: variable_list ',' . variable

    STRING  shift, and go to state 9

    variable  go to state 32
    name      go to state 21


State 25

    4 object_list: name '{' variable_list '}' .

    $default  reduce using rule 4 (object_list)


State 26

    8 variable: name FLOAT .

    $default  reduce using rule 8 (variable)


State 27

    9 variable: name INTEGER .

    $default  reduce using rule 9 (variable)


State 28

    7 variable: name STRING .

    $default  reduce using rule 7 (variable)


State 29

   11 array_var: '[' . array_list ']'

    STRING  shift, and go to state 9

    variable    go to state 33
    array_list  go to state 34
    name        go to state 21


State 30

   10 variable: name array_var .

    $default  reduce using rule 10 (variable)


State 31

    3 object_list: object_list ',' name '{' variable_list . '}'
    5 variable_list: variable_list . ',' variable

    ','  shift, and go to state 24
    '}'  shift, and go to state 35


State 32

    5 variable_list: variable_list ',' variable .

    $default  reduce using rule 5 (variable_list)


State 33

   13 array_list: variable .

    $default  reduce using rule 13 (array_list)


State 34

   11 array_var: '[' array_list . ']'
   12 array_list: array_list . ',' variable

    ','  shift, and go to state 36
    ']'  shift, and go to state 37


State 35

    3 object_list: object_list ',' name '{' variable_list '}' .

    $default  reduce using rule 3 (object_list)


State 36

   12 array_list: array_list ',' . variable

    STRING  shift, and go to state 9

    variable  go to state 38
    name      go to state 21


State 37

   11 array_var: '[' array_list ']' .

    $default  reduce using rule 11 (array_var)


State 38

   12 array_list: array_list ',' variable .

    $default  reduce using rule 12 (array_list)
